--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body
+    class="bg-[linear-gradient(135deg,_#0f172a,_#1e293b)] text-slate-100 min-h-screen"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
