--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Stud-Bud</title>
   </head>
   <body
     class="bg-[linear-gradient(135deg,_#0f172a,_#1e293b)] text-slate-100 min-h-screen"
