Updated the bg and navbar

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,12 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
+
+    <title>Stud-Bud | Smart Study Companion</title>
+
+    <!-- 🔎 SEO Meta -->
+    <meta
+      name="description"
+      content="Stud-Bud – Your smart study companion. Track tasks, boost productivity, and achieve your learning goals effortlessly."
+    />
+    <meta name="author" content="Stud-Bud Team" />
+    <meta
+      name="keywords"
+      content="study app, productivity, task tracker, student tools, Stud-Bud"
+    />
+
+    <!-- 📱 Social Sharing -->
+    <meta property="og:title" content="Stud-Bud | Smart Study Companion" />
+    <meta
+      property="og:description"
+      content="Track tasks, boost productivity, and achieve your learning goals with Stud-Bud."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/stud-bud-preview.png" />
+    <meta property="og:url" content="https://stud-bud-ai.vercel.app" />
+
+    <!-- 🐦 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stud-Bud | Smart Study Companion" />
+    <meta
+      name="twitter:description"
+      content="Your smart study companion. Task tracking, productivity, and learning tools all in one place."
+    />
+    <meta name="twitter:image" content="/stud-bud-preview.png" />
+
+    <!-- 🎨 Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- 🌐 Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stud-Bud</title>
   </head>
+
   <body
-    class="bg-[linear-gradient(135deg,_#0f172a,_#1e293b)] text-slate-100 min-h-screen"
+    class="bg-gradient-to-br from-[#020617] via-[#0f172a] to-[#1e293b] text-slate-100 min-h-screen antialiased"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
