Updated backend,dashboard and features.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -50,7 +50,7 @@
   </head>
 
   <body
-    class="bg-gradient-to-br from-[#020617] via-[#0f172a] to-[#1e293b] text-slate-100 min-h-screen antialiased"
+    class="bg-gradient-to-br from-[#0b1120] via-[#0f172a] to-[#1e293b] text-slate-100 min-h-screen antialiased"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
